Change the code and make it more readable and edited the notebook file

--- a/main.ipynb
+++ b/main.ipynb
@@ -21,6 +21,318 @@
     "\n",
     "from markdown_utils import to_markdown"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define constants\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_NAME = \"gemini-1.5-pro-latest\"\n",
+    "EMBEDDING_MODEL_NAME = \"models/embedding-001\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve the environment variables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_API_KEY = os.environ.get(\"GOOGLE_API_KEY\")\n",
+    "PINECONE_API_KEY = os.environ.get(\"PINECONE_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pinecone init and configuration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
+    "\n",
+    "# Define the pinecone index name\n",
+    "index_name = \"gimhara-pinecone-index\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize the llm model (google gemini model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = GoogleGenerativeAI(model=MODEL_NAME, google_api_key=MODEL_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = TextLoader(file_path=\"./data/data.txt\")\n",
+    "data = loader.load()\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
+    "texts = text_splitter.split_documents(data)\n",
+    "text_contents = [t.page_content for t in texts]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vector embedding data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_dim = 768  # number of vector dimension of google gemini embeddings\n",
+    "vector_count = len(texts)\n",
+    "\n",
+    "\n",
+    "# Initialize embeddings model\n",
+    "embeddings = GoogleGenerativeAIEmbeddings(model=EMBEDDING_MODEL_NAME)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A helper function to break an iterable into chunks of size batch_size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunks(iterable, batch_size=100):\n",
+    "\n",
+    "    it = iter(iterable)\n",
+    "    chunk = tuple(itertools.islice(it, batch_size))\n",
+    "    while chunk:\n",
+    "        yield chunk\n",
+    "        chunk = tuple(itertools.islice(it, batch_size))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Generator that generates many (id, vector) pairs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_generator = map(\n",
+    "    lambda i: (f\"id-{i}\", [random.random() for _ in range(vector_dim)]),\n",
+    "    range(vector_count),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create and initialize a pinecone instance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc.create_index(\n",
+    "    name=index_name,\n",
+    "    dimension=vector_dim,\n",
+    "    metric=\"cosine\",\n",
+    "    spec=ServerlessSpec(cloud=\"aws\", region=\"us-east-1\"),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize the Pinecone index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = pc.Index(index_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Upsert data with 100 vectors per upsert request\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ids_vectors_chunk in chunks(data_generator, batch_size=100):\n",
+    "    index.upsert(vectors=ids_vectors_chunk)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## create a docserch object for given index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docsearch = pinecone_lang.from_texts(\n",
+    "    [t.page_content for t in texts], embeddings, index_name=index_name\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define query\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"what are the Challenges and Opportunities in Sri Lanka?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the documents from the pinecone db which is similar to the query\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = docsearch.similarity_search(query, k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a chain object from langchain for questions and answerings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = load_qa_chain(llm, chain_type=\"stuff\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the chain and store the results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain_output = chain.run(input_documents=docs, question=query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display the results in markdown format\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_markdown(chain_output)"
+   ]
   }
  ],
  "metadata": {
@@ -30,7 +342,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
