Change the code and make it more readable and edited the notebook file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(page_content='*Challenges and Opportunities*'),\n",
+       " Document(page_content=\"*Tourism*\\n\\nSri Lanka's natural beauty and cultural heritage have made it a popular tourist destination, attracting millions of visitors each year. From the ancient city of Anuradhapura to the pristine beaches of Mirissa, the island offers a wealth of attractions for travelers seeking adventure, relaxation, and cultural immersion. However, the tourism industry also faces challenges, such as environmental degradation, overcrowding, and the need for sustainable development practices.\"),\n",
+       " Document(page_content='Despite its many strengths, Sri Lanka faces numerous challenges in the modern world. Ethnic tensions, political instability, and socioeconomic disparities continue to hamper progress and development. However, the island also possesses significant opportunities for growth and prosperity, including its strategic location, natural resources, and human capital. By addressing these challenges and harnessing its potential, Sri Lanka can chart a course towards a brighter future for its people.'),\n",
+       " Document(page_content='**Sri Lanka: Jewel of the Indian Ocean**'),\n",
+       " Document(page_content='and the challenges it faces in the modern world.'),\n",
+       " Document(page_content='*Culture and Society*'),\n",
+       " Document(page_content='*Economy*\\n\\nDespite its small size, Sri Lanka boasts a relatively diverse economy, with agriculture, industry, and services sectors contributing to its GDP. The country is known for its export-oriented industries, including tea, garments, and tourism. However, Sri Lanka faces economic challenges, including high levels of debt, poverty, and unemployment, exacerbated by the impacts of natural disasters and political instability.\\n\\n*Tourism*'),\n",
+       " Document(page_content=\"In conclusion, Sri Lanka's allure lies not only in its breathtaking natural beauty but also in its rich history, vibrant culture, and resilient people. As the country navigates the complexities of the modern world, it must draw upon its strengths and values to overcome challenges and seize opportunities for a better tomorrow.\"),\n",
+       " Document(page_content=\"*Geography and Climate*\\n\\nLocated off the southern tip of India, Sri Lanka's geography is characterized by its coastal plains, central highlands, and interior plateaus. The island's compact size belies its remarkable biodiversity, with dense forests teeming with wildlife and fertile plains that support agriculture. Sri Lanka's climate varies from tropical in the lowlands to temperate in the central highlands, offering a range of ecosystems and microclimates.\\n\\n*History*\"),\n",
+       " Document(page_content=\"Sri Lanka's history, but it was marred by ethnic tensions that ultimately led to a protracted civil war lasting nearly three decades.\")]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "docs"
    ]
@@ -295,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,9 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "> ## Challenges and Opportunities in Sri Lanka:\n",
+       "> \n",
+       "> **Challenges:**\n",
+       "> \n",
+       "> * **Ethnic Tensions and Political Instability:**  Sri Lanka's history is marked by ethnic tensions, leading to a long civil war. While the war ended in 2009, achieving lasting peace and reconciliation remains a challenge. Political instability further complicates progress and development. \n",
+       "> * **Economic Issues:**  High levels of debt, poverty, and unemployment pose significant challenges. The impacts of natural disasters and political instability exacerbate these issues.\n",
+       "> * **Environmental Concerns:**  The tourism industry, while beneficial, also contributes to environmental degradation and overcrowding. Balancing economic growth with sustainable development is crucial.\n",
+       "> \n",
+       "> **Opportunities:**\n",
+       "> \n",
+       "> * **Strategic Location:**  Sri Lanka's position in the Indian Ocean offers potential for increased trade and economic growth.\n",
+       "> * **Natural Resources:**  The island's fertile lands and diverse ecosystems provide opportunities for agricultural development and ecotourism.\n",
+       "> * **Human Capital:**  Sri Lanka has a relatively well-educated population, which can contribute to advancements in various sectors.\n",
+       "> * **Tourism Potential:** With its natural beauty and cultural heritage, Sri Lanka can further develop sustainable tourism practices to attract visitors while preserving its environment and cultural identity. \n",
+       "> \n",
+       "> **By addressing its challenges and leveraging its opportunities, Sri Lanka can work towards a brighter future for its people.** \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "to_markdown(chain_output)"
    ]
